care/force-app/main/default/objects/Stripe_Refund__c/Stripe_Refund__c.object-meta.xml
<CustomObject>
    <label>Stripe Refund</label>
    <nameField>
        <displayFormat>REFUND-{0000000}</displayFormat>
        <label>Stripe Refund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>