care/force-app/main/default/objects/Stripe_Refund__c/fields/Amount_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Formatted__c</fullName>
    <description>This is for use in the flow</description>
    <inlineHelpText>This is for use in the flow</inlineHelpText>
    <label>Amount Formatted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>