care/force-app/main/default/objects/Stripe_Refund__c/fields/AmountFromResponse__c.field-meta.xml
<CustomField>
    <fullName>AmountFromResponse__c</fullName>
    <label>AmountFromResponse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>