care/force-app/main/default/objects/Stripe_Refund__c/fields/Balance_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Balance_Transaction__c</fullName>
    <label>Balance Transaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>