care/force-app/main/default/objects/Stripe_Refund__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Stripe Refunds</relationshipLabel>
    <relationshipName>Stripe_Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>