care/force-app/main/default/objects/Stripe_Refund__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <label>Charge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>