care/force-app/main/default/objects/Stripe_Refund__c/fields/Date_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Date_Refunded__c</fullName>
    <label>Date Refunded</label>
    <type>DateTime</type>
</CustomField>