care/force-app/main/default/objects/Stripe_Refund__c/fields/Payment_Intent__c.field-meta.xml
<CustomField>
    <fullName>Payment_Intent__c</fullName>
    <label>Payment Intent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>