care/force-app/main/default/objects/Stripe_Refund__c/fields/Refund_Application_Fee__c.field-meta.xml
<CustomField>
    <fullName>Refund_Application_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refund Application Fee</label>
    <type>Checkbox</type>
</CustomField>