care/force-app/main/default/objects/Stripe_Refund__c/fields/Refund_Created__c.field-meta.xml
<CustomField>
    <fullName>Refund_Created__c</fullName>
    <label>Refund Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>