care/force-app/main/default/objects/Stripe_Refund__c/fields/Refund_Source__c.field-meta.xml
<CustomField>
    <fullName>Refund_Source__c</fullName>
    <formula>IF(Reverse_Transfer__c = true, &apos;Provider&apos;, &apos;Care&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Source</label>
    <type>Text</type>
</CustomField>