care/force-app/main/default/objects/Stripe_Refund__c/fields/Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason__c</fullName>
    <label>Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Return_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Refund_Reason</valueSetName>
    </valueSet>
</CustomField>