care/force-app/main/default/objects/Stripe_Refund__c/fields/Return_Type__c.field-meta.xml
<CustomField>
    <fullName>Return_Type__c</fullName>
    <label>Return Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Refund_Type</valueSetName>
    </valueSet>
</CustomField>