care/force-app/main/default/objects/Stripe_Refund__c/fields/Reverse_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reverse Transfer</label>
    <type>Checkbox</type>
</CustomField>